Add dev dependencies

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.10"
   }
 }
