--- a/bower.json
+++ b/bower.json
@@ -24,8 +24,7 @@
   "homepage": "https://pomber.github.io/paper-fab-speed-dial/",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1"
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
